--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -4,7 +4,8 @@ stages:
   - publishImageConfig:
       dockerfilePath: ./Dockerfile
       buildContext: .
-      tag: krumware/covidsc-web:master
+      tag: covidsc-web:master
+      registry: 127.0.0.1:34422
 timeout: 60
 notification:
   recipients:
