Update .rancher-pipeline.yml file

--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -11,6 +11,9 @@ stages:
   - applyYamlConfig:
       path: ./deployment/development.yaml
 timeout: 60
+branch:
+  include:
+  - master
 notification:
   recipients:
   - recipient: '#systems'
