--- a/deployment/development.yaml
+++ b/deployment/development.yaml
@@ -44,6 +44,8 @@ spec:
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
+      imagePullSecrets:
+      - name: pipeline-docker-registry
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
