Update .rancher-pipeline.yml file

--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -11,9 +11,7 @@ stages:
   - applyYamlConfig:
       path: ./deployment/development.yaml
 timeout: 60
-branch:
-  include:
-  - master
+branch: {}
 notification:
   recipients:
   - recipient: '#systems'
