--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -6,14 +6,37 @@ stages:
       buildContext: .
       tag: covidsc-web:master
       registry: 127.0.0.1:34422
-- name: Deploy
+- name: Deploy Master
   steps:
+  - runScriptConfig:
+      image: node:latest
+      shellScript: |-
+        cd deployment
+        sed -i 's/BUILD_NUM/build${CICD_EXECUTION_SEQUENCE}/g' development.yaml
   - applyYamlConfig:
       path: ./deployment/development.yaml
+  when:
+    branch:
+      include:
+      - master
+- name: Deploy PR
+  steps:
+  - runScriptConfig:
+      image: node:latest
+      shellScript: |-
+        cd deployment
+        sed -i 's/BRANCH/${CICD_GIT_BRANCH}/g' pr-dev-deployment.yaml
+        sed -i 's/BUILD_NUM/build${CICD_EXECUTION_SEQUENCE}/g' pr-dev-deployment.yaml
+  - applyYamlConfig:
+      path: ./deployment/pr-dev-deployment.yaml
+    when:
+      branch: {}
+  when:
+    branch:
+      exclude:
+      - master
 timeout: 60
-branch:
-  include:
-  - master
+branch: {}
 notification:
   recipients:
   - recipient: '#systems'
