--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -25,6 +25,8 @@ stages:
       image: node:latest
       shellScript: |-
         cd deployment
+        echo ${CICD_GIT_BRANCH}
+        echo ${CICD_EXECUTION_SEQUENCE}
         sed -i 's/BRANCH/${CICD_GIT_BRANCH}/g' pr-dev-deployment.yaml
         sed -i 's/BUILD_NUM/build${CICD_EXECUTION_SEQUENCE}/g' pr-dev-deployment.yaml
   - applyYamlConfig:
