Missed the in place flag so it didn't actually save the result

--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -27,7 +27,7 @@ stages:
         cd deployment
         sed -i 's/BRANCH/${CICD_GIT_BRANCH}/g' pr-dev-deployment.yaml
         sed -i 's/BUILD_NUM/build${CICD_EXECUTION_SEQUENCE}/g' pr-dev-deployment.yaml
-        sed '/^ / s/_/-/' pr-dev-deployment.yaml
+        sed -i '/^ / s/_/-/' pr-dev-deployment.yaml
   - applyYamlConfig:
       path: ./deployment/pr-dev-deployment.yaml
     when:
