--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -25,11 +25,10 @@ stages:
       image: node:latest
       shellScript: |-
         cd deployment
-        sed -i "s/BRANCH/${CICD_GIT_BRANCH}/g" pr-dev-deployment.yaml
+        sed -i "s/BRANCH/${CICD_GIT_BRANCH,,}/g" pr-dev-deployment.yaml > temp.yaml
         sed -i "s/BUILD_NUM/build${CICD_EXECUTION_SEQUENCE}/g" pr-dev-deployment.yaml
         sed -i "/^ / s/_/-/" pr-dev-deployment.yaml
-        sed -i "s/[A-Z]/\L&/g" pr-dev-deployment.yaml
-        sed -i "33 s|.*|        image: 127.0.0.1:34422/covidsc-web:${CICD_GIT_BRANCH}|" pr-dev-deployment.yaml
+        sed -i "33 s|.*|        image: 127.0.0.1:34422/covidsc-web:${CICD_GIT_BRANCH,,}|" pr-dev-deployment.yaml
   - applyYamlConfig:
       path: ./deployment/pr-dev-deployment.yaml
     when:
