--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -25,6 +25,7 @@ stages:
       image: node:latest
       shellScript: |-
         cd deployment
+        echo CICD_GIT_BRANCH_LOWER=`echo ${CICD_GIT_BRANCH} | sed "s/[A-Z]/\L&/g"` > env.properties
         sed -i "s/BRANCH/${CICD_GIT_BRANCH}/g" pr-dev-deployment.yaml
         sed -i "s/BUILD_NUM/build${CICD_EXECUTION_SEQUENCE}/g" pr-dev-deployment.yaml
         sed -i "/^ / s/_/-/" pr-dev-deployment.yaml
